After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765999 - Fail whale dialog is not translated
Fail whale dialog is not translated
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-04 18:02 UTC by Roddy Shuler
Modified: 2016-05-09 19:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.15 KB, patch)
2016-05-04 18:11 UTC, Roddy Shuler
reviewed Details | Review

Description Roddy Shuler 2016-05-04 18:02:06 UTC
When showing the "fail whale" dialog upon a desktop crash, it is always in English even though translations are provided in the .po files.

Though I've tested on version 3.10, looking at the source code it appears the problem still exists on git master.

The solution appears to be as simple as adding the following 4 lines at the start of main() in gnome-session/gsm-fail-whale-dialog.c:

        setlocale (LC_ALL, "");
        bindtextdomain (GETTEXT_PACKAGE, LOCALE_DIR);
        bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
        textdomain (GETTEXT_PACKAGE);
Comment 1 Roddy Shuler 2016-05-04 18:11:37 UTC
Created attachment 327310 [details] [review]
Proposed patch
Comment 2 Michael Catanzaro 2016-05-09 19:16:40 UTC
I've pushed a slightly-modified version of this patch:

 * Removed the call to setlocale() -- this is actually only needed for command line programs. Since the fail whale is a GTK+ app, GTK+ handles it for us.
 * Moved the code down a few lines, below variable initializations.