Initialize fail whale translations

Without this, the fail whale dialog displayed upon desktop crashes
is always in English.

https://bugzilla.gnome.org/show_bug.cgi?id=765999